--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <script>
 const questions = [
 {
-question: "1) Which color shirt was I wearing on our first base?",
+question: "1) Which color shirt was I wearing on our first date?",
 options: ["White", "Blue", "Light Blue", "Purple"],
 answer: "Light Blue"
 },
